# MemCore

./: CHANGELOG.md  CMakeLists.txt  LaunchTests.sh  README.md
.github/workflows/: cmake.yml
benchmarks/: AllocatorBench.cpp
cmake/: MemCoreConfig.cmake.in
include/MemCore/: Align.hpp  AllocatorConcept.hpp  ArenaAllocator.hpp  CanaryAllocator.hpp  ClassAllocator.hpp  FallbackAllocator.hpp  FreeListAllocator.hpp  LinearAllocator.hpp  MallocUpstream.hpp  MemoryHelpers.hpp  MemoryTags.hpp  PmrAdapter.hpp  PoolAllocator.hpp  StackAllocator.hpp  StlAdapter.hpp  ThreadSafeAllocator.hpp  TrackerAllocator.hpp  Types.hpp  VirtualUpstream.hpp
src/: VirtualUpstream.cpp  main.cpp
tests/: AlignTest.cpp  AllocatorConceptTest.cpp  ArenaAllocatorTest.cpp  CanaryAllocatorTest.cpp  ClassAllocatorTest.cpp  FallbackAllocatorTest.cpp  FreeListAllocatorTest.cpp  LinearAllocatorTest.cpp  MallocUpstreamTest.cpp  MemoryHelpersTest.cpp  PmrAdapterTest.cpp  PoolAllocatorTest.cpp  StackAllocatorTest.cpp  StlAdapterTest.cpp  ThreadSafeAllocatorTest.cpp  TrackerAllocatorTest.cpp  VirtualUpstreamTest.cpp
